--- a/2주차/교보문고 크롤링 코드 배포용.ipynb
+++ b/2주차/교보문고 크롤링 코드 배포용.ipynb
@@ -92,9 +92,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "book_titles = list()\n",
-    "book_stories = list()\n",
-    "book_keyPicks = list()"
+    "#book_titles = list()\n",
+    "#book_stories = list()\n",
+    "#book_keyPicks = list()"
    ]
   },
   {
